// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectedVaccinationItem Snapshot Tests matches snapshot with default props 1`] = `
<div>
  <div
    class="cds--css-grid"
  >
    <div
      class="vaccinationTitle cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <span>
        COVID-19 Vaccine
      </span>
    </div>
    <div
      class="vaccinationActions cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <div
        class="cds--form-item cds--checkbox-wrapper statControl"
      >
        <input
          aria-label="STAT"
          class="cds--checkbox"
          id="stat-entry-1"
          type="checkbox"
        />
        <label
          class="cds--checkbox-label"
          for="stat-entry-1"
          title=""
        >
          <span
            class="cds--checkbox-label-text"
            dir="auto"
          >
            STAT
          </span>
        </label>
        <div
          class="cds--checkbox__validation-msg"
        />
      </div>
    </div>
    <div
      class="dosageControls cds--sm:col-span-2 cds--md:col-span-3 cds--lg:col-span-6 cds--css-grid-column"
    >
      <div
        class="cds--form-item dosageInput"
      >
        <div
          class="cds--number cds--number--helpertext cds--number--nolabel cds--number--sm"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="dosage-unit-entry-1"
          >
            Dosage
          </label>
          <div
            class="cds--number__input-wrapper"
          >
            <input
              aria-invalid="false"
              aria-label="Dosage"
              id="dosage-unit-entry-1"
              inputmode="decimal"
              min="0"
              pattern="[0-9]*"
              step="1"
              type="number"
              value="1"
            />
            <div
              class="cds--number__controls"
            >
              <button
                aria-label="Decrement number"
                class="cds--number__control-btn down-icon"
                tabindex="-1"
                title="Decrement number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="down-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 15H24V17H8z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
              <button
                aria-label="Increment number"
                class="cds--number__control-btn up-icon"
                tabindex="-1"
                title="Increment number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="up-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper dosageUnit"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_of_-toggle-button"
          id="downshift-_r_of_-label"
        >
          Dosage unit
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="dosage-unit-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_of_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Dosage Unit"
            class="cds--list-box__field"
            id="downshift-_r_of_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Dosage unit"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Dosage unit
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_of_-label"
            class="cds--list-box__menu"
            id="downshift-_r_of_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_oi_-toggle-button"
          id="downshift-_r_oi_-label"
        >
          Frequency
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="frequency-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_oi_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Frequency"
            class="cds--list-box__field"
            id="downshift-_r_oi_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Frequency"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Frequency
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_oi_-label"
            class="cds--list-box__menu"
            id="downshift-_r_oi_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="durationControls cds--sm:col-span-2 cds--md:col-span-3 cds--lg:col-span-6 cds--css-grid-column"
    >
      <div
        class="cds--form-item durationInput"
      >
        <div
          class="cds--number cds--number--helpertext cds--number--nolabel cds--number--sm"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="duration-entry-1"
          >
            Duration
          </label>
          <div
            class="cds--number__input-wrapper"
          >
            <input
              aria-invalid="false"
              aria-label="Duration"
              id="duration-entry-1"
              inputmode="decimal"
              min="0"
              pattern="[0-9]*"
              step="1"
              type="number"
              value="0"
            />
            <div
              class="cds--number__controls"
            >
              <button
                aria-label="Decrement number"
                class="cds--number__control-btn down-icon"
                tabindex="-1"
                title="Decrement number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="down-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 15H24V17H8z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
              <button
                aria-label="Increment number"
                class="cds--number__control-btn up-icon"
                tabindex="-1"
                title="Increment number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="up-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper durationUnit"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_ol_-toggle-button"
          id="downshift-_r_ol_-label"
        >
          Duration unit
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="duration-unit-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_ol_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Duration Unit"
            class="cds--list-box__field"
            id="downshift-_r_ol_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Duration unit"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Duration unit
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_ol_-label"
            class="cds--list-box__menu"
            id="downshift-_r_ol_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_oo_-toggle-button"
          id="downshift-_r_oo_-label"
        >
          Instructions
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="vac-instructions-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_oo_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Vaccination Instructions"
            class="cds--list-box__field"
            id="downshift-_r_oo_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Instructions"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Instructions
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_oo_-label"
            class="cds--list-box__menu"
            id="downshift-_r_oo_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_or_-toggle-button"
          id="downshift-_r_or_-label"
        >
          Route
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="route-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_or_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Route"
            class="cds--list-box__field"
            id="downshift-_r_or_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Route"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Route
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_or_-label"
            class="cds--list-box__menu"
            id="downshift-_r_or_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <div
        class="cds--form-item"
      >
        <div
          class="cds--date-picker cds--date-picker--single"
        >
          <div
            class="cds--date-picker-container"
          >
            <label
              class="cds--label cds--visually-hidden"
              dir="auto"
              for="start-date-entry-1"
            >
              Start date
            </label>
            <div
              class="cds--date-picker-input__wrapper"
            >
              <span>
                <input
                  aria-label="Start Date"
                  class="cds--date-picker__input cds--date-picker__input--sm flatpickr-input"
                  id="start-date-entry-1"
                  pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                  placeholder="d/m/Y"
                  type="text"
                />
                <svg
                  aria-hidden="true"
                  class="cds--date-picker__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerRow cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--css-grid-column"
    >
      <a
        class="cds--link"
        href="#"
      >
        Add Note
      </a>
      <span>
        Total quantity
         : 
        0
         
      </span>
    </div>
  </div>
</div>
`;

exports[`SelectedVaccinationItem Snapshot Tests matches snapshot with errors 1`] = `
<div>
  <div
    class="cds--css-grid"
  >
    <div
      class="vaccinationTitle cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <span>
        COVID-19 Vaccine
      </span>
    </div>
    <div
      class="vaccinationActions cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <div
        class="cds--form-item cds--checkbox-wrapper statControl"
      >
        <input
          aria-label="STAT"
          class="cds--checkbox"
          id="stat-entry-1"
          type="checkbox"
        />
        <label
          class="cds--checkbox-label"
          for="stat-entry-1"
          title=""
        >
          <span
            class="cds--checkbox-label-text"
            dir="auto"
          >
            STAT
          </span>
        </label>
        <div
          class="cds--checkbox__validation-msg"
        />
      </div>
    </div>
    <div
      class="dosageControls cds--sm:col-span-2 cds--md:col-span-3 cds--lg:col-span-6 cds--css-grid-column"
    >
      <div
        class="cds--form-item dosageInput"
      >
        <div
          class="cds--number cds--number--helpertext cds--number--nolabel cds--number--sm"
          data-invalid="true"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="dosage-unit-entry-1"
          >
            Dosage
          </label>
          <div
            class="cds--number__input-wrapper"
          >
            <input
              aria-describedby="dosage-unit-entry-1-error-msg"
              aria-invalid="true"
              aria-label="Dosage"
              data-invalid="true"
              id="dosage-unit-entry-1"
              inputmode="decimal"
              min="0"
              pattern="[0-9]*"
              step="1"
              type="number"
              value="1"
            />
            <svg
              aria-hidden="true"
              class="cds--number__invalid"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              />
              <path
                d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
                data-icon-path="inner-path"
                opacity="0"
              />
            </svg>
            <div
              class="cds--number__controls"
            >
              <button
                aria-label="Decrement number"
                class="cds--number__control-btn down-icon"
                tabindex="-1"
                title="Decrement number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="down-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 15H24V17H8z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
              <button
                aria-label="Increment number"
                class="cds--number__control-btn up-icon"
                tabindex="-1"
                title="Increment number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="up-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
            </div>
          </div>
          <div
            class="cds--form-requirement"
            dir="auto"
            id="dosage-unit-entry-1-error-msg"
          >
            Please enter a value
          </div>
        </div>
      </div>
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper dosageUnit"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_p0_-toggle-button"
          id="downshift-_r_p0_-label"
        >
          Dosage unit
        </label>
        <div
          class="cds--dropdown cds--dropdown--invalid cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm cds--list-box--invalid"
          data-invalid="true"
          id="dosage-unit-entry-1"
        >
          <svg
            aria-hidden="true"
            class="cds--list-box__invalid-icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
            />
            <path
              d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              data-icon-path="inner-path"
              opacity="0"
            />
          </svg>
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_p0_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Dosage Unit"
            class="cds--list-box__field"
            id="downshift-_r_p0_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Dosage unit"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Dosage unit
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_p0_-label"
            class="cds--list-box__menu"
            id="downshift-_r_p0_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
        <div
          class="cds--form-requirement"
        >
          Please select a value
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_p3_-toggle-button"
          id="downshift-_r_p3_-label"
        >
          Frequency
        </label>
        <div
          class="cds--dropdown cds--dropdown--invalid cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm cds--list-box--invalid"
          data-invalid="true"
          id="frequency-entry-1"
        >
          <svg
            aria-hidden="true"
            class="cds--list-box__invalid-icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
            />
            <path
              d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              data-icon-path="inner-path"
              opacity="0"
            />
          </svg>
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_p3_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Frequency"
            class="cds--list-box__field"
            id="downshift-_r_p3_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Frequency"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Frequency
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_p3_-label"
            class="cds--list-box__menu"
            id="downshift-_r_p3_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
        <div
          class="cds--form-requirement"
        >
          Please select a value
        </div>
      </div>
    </div>
    <div
      class="durationControls cds--sm:col-span-2 cds--md:col-span-3 cds--lg:col-span-6 cds--css-grid-column"
    >
      <div
        class="cds--form-item durationInput"
      >
        <div
          class="cds--number cds--number--helpertext cds--number--nolabel cds--number--sm"
          data-invalid="true"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="duration-entry-1"
          >
            Duration
          </label>
          <div
            class="cds--number__input-wrapper"
          >
            <input
              aria-describedby="duration-entry-1-error-msg"
              aria-invalid="true"
              aria-label="Duration"
              data-invalid="true"
              id="duration-entry-1"
              inputmode="decimal"
              min="0"
              pattern="[0-9]*"
              step="1"
              type="number"
              value="0"
            />
            <svg
              aria-hidden="true"
              class="cds--number__invalid"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              />
              <path
                d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
                data-icon-path="inner-path"
                opacity="0"
              />
            </svg>
            <div
              class="cds--number__controls"
            >
              <button
                aria-label="Decrement number"
                class="cds--number__control-btn down-icon"
                tabindex="-1"
                title="Decrement number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="down-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 15H24V17H8z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
              <button
                aria-label="Increment number"
                class="cds--number__control-btn up-icon"
                tabindex="-1"
                title="Increment number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="up-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
            </div>
          </div>
          <div
            class="cds--form-requirement"
            dir="auto"
            id="duration-entry-1-error-msg"
          >
            Please enter a value
          </div>
        </div>
      </div>
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper durationUnit"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_p6_-toggle-button"
          id="downshift-_r_p6_-label"
        >
          Duration unit
        </label>
        <div
          class="cds--dropdown cds--dropdown--invalid cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm cds--list-box--invalid"
          data-invalid="true"
          id="duration-unit-entry-1"
        >
          <svg
            aria-hidden="true"
            class="cds--list-box__invalid-icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
            />
            <path
              d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              data-icon-path="inner-path"
              opacity="0"
            />
          </svg>
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_p6_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Duration Unit"
            class="cds--list-box__field"
            id="downshift-_r_p6_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Duration unit"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Duration unit
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_p6_-label"
            class="cds--list-box__menu"
            id="downshift-_r_p6_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
        <div
          class="cds--form-requirement"
        >
          Please select a value
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_p9_-toggle-button"
          id="downshift-_r_p9_-label"
        >
          Instructions
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="vac-instructions-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_p9_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Vaccination Instructions"
            class="cds--list-box__field"
            id="downshift-_r_p9_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Instructions"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Instructions
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_p9_-label"
            class="cds--list-box__menu"
            id="downshift-_r_p9_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_pc_-toggle-button"
          id="downshift-_r_pc_-label"
        >
          Route
        </label>
        <div
          class="cds--dropdown cds--dropdown--invalid cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm cds--list-box--invalid"
          data-invalid="true"
          id="route-entry-1"
        >
          <svg
            aria-hidden="true"
            class="cds--list-box__invalid-icon"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
            />
            <path
              d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
              data-icon-path="inner-path"
              opacity="0"
            />
          </svg>
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_pc_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Route"
            class="cds--list-box__field"
            id="downshift-_r_pc_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Route"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Route
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_pc_-label"
            class="cds--list-box__menu"
            id="downshift-_r_pc_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
        <div
          class="cds--form-requirement"
        >
          Please select a value
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <div
        class="cds--form-item"
      >
        <div
          class="cds--date-picker cds--date-picker--single"
        >
          <div
            class="cds--date-picker-container"
          >
            <label
              class="cds--label cds--visually-hidden"
              dir="auto"
              for="start-date-entry-1"
            >
              Start date
            </label>
            <div
              class="cds--date-picker-input__wrapper"
            >
              <span>
                <input
                  aria-label="Start Date"
                  class="cds--date-picker__input cds--date-picker__input--sm flatpickr-input"
                  id="start-date-entry-1"
                  pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                  placeholder="d/m/Y"
                  type="text"
                />
                <svg
                  aria-hidden="true"
                  class="cds--date-picker__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerRow cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--css-grid-column"
    >
      <a
        class="cds--link"
        href="#"
      >
        Add Note
      </a>
      <span>
        Total quantity
         : 
        0
         
      </span>
    </div>
  </div>
</div>
`;

exports[`SelectedVaccinationItem Snapshot Tests matches snapshot with note visible 1`] = `
<div>
  <div
    class="cds--css-grid"
  >
    <div
      class="vaccinationTitle cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <span>
        COVID-19 Vaccine
      </span>
    </div>
    <div
      class="vaccinationActions cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <div
        class="cds--form-item cds--checkbox-wrapper statControl"
      >
        <input
          aria-label="STAT"
          class="cds--checkbox"
          id="stat-entry-1"
          type="checkbox"
        />
        <label
          class="cds--checkbox-label"
          for="stat-entry-1"
          title=""
        >
          <span
            class="cds--checkbox-label-text"
            dir="auto"
          >
            STAT
          </span>
        </label>
        <div
          class="cds--checkbox__validation-msg"
        />
      </div>
    </div>
    <div
      class="dosageControls cds--sm:col-span-2 cds--md:col-span-3 cds--lg:col-span-6 cds--css-grid-column"
    >
      <div
        class="cds--form-item dosageInput"
      >
        <div
          class="cds--number cds--number--helpertext cds--number--nolabel cds--number--sm"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="dosage-unit-entry-1"
          >
            Dosage
          </label>
          <div
            class="cds--number__input-wrapper"
          >
            <input
              aria-invalid="false"
              aria-label="Dosage"
              id="dosage-unit-entry-1"
              inputmode="decimal"
              min="0"
              pattern="[0-9]*"
              step="1"
              type="number"
              value="1"
            />
            <div
              class="cds--number__controls"
            >
              <button
                aria-label="Decrement number"
                class="cds--number__control-btn down-icon"
                tabindex="-1"
                title="Decrement number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="down-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 15H24V17H8z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
              <button
                aria-label="Increment number"
                class="cds--number__control-btn up-icon"
                tabindex="-1"
                title="Increment number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="up-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper dosageUnit"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_ph_-toggle-button"
          id="downshift-_r_ph_-label"
        >
          Dosage unit
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="dosage-unit-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_ph_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Dosage Unit"
            class="cds--list-box__field"
            id="downshift-_r_ph_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Dosage unit"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Dosage unit
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_ph_-label"
            class="cds--list-box__menu"
            id="downshift-_r_ph_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_pk_-toggle-button"
          id="downshift-_r_pk_-label"
        >
          Frequency
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="frequency-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_pk_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Frequency"
            class="cds--list-box__field"
            id="downshift-_r_pk_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Frequency"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Frequency
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_pk_-label"
            class="cds--list-box__menu"
            id="downshift-_r_pk_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="durationControls cds--sm:col-span-2 cds--md:col-span-3 cds--lg:col-span-6 cds--css-grid-column"
    >
      <div
        class="cds--form-item durationInput"
      >
        <div
          class="cds--number cds--number--helpertext cds--number--nolabel cds--number--sm"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="duration-entry-1"
          >
            Duration
          </label>
          <div
            class="cds--number__input-wrapper"
          >
            <input
              aria-invalid="false"
              aria-label="Duration"
              id="duration-entry-1"
              inputmode="decimal"
              min="0"
              pattern="[0-9]*"
              step="1"
              type="number"
              value="0"
            />
            <div
              class="cds--number__controls"
            >
              <button
                aria-label="Decrement number"
                class="cds--number__control-btn down-icon"
                tabindex="-1"
                title="Decrement number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="down-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 15H24V17H8z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
              <button
                aria-label="Increment number"
                class="cds--number__control-btn up-icon"
                tabindex="-1"
                title="Increment number"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="up-icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
                  />
                </svg>
              </button>
              <div
                class="cds--number__rule-divider"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper durationUnit"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_pn_-toggle-button"
          id="downshift-_r_pn_-label"
        >
          Duration unit
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="duration-unit-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_pn_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Duration Unit"
            class="cds--list-box__field"
            id="downshift-_r_pn_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Duration unit"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Duration unit
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_pn_-label"
            class="cds--list-box__menu"
            id="downshift-_r_pn_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_pq_-toggle-button"
          id="downshift-_r_pq_-label"
        >
          Instructions
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="vac-instructions-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_pq_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Vaccination Instructions"
            class="cds--list-box__field"
            id="downshift-_r_pq_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Instructions"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Instructions
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_pq_-label"
            class="cds--list-box__menu"
            id="downshift-_r_pq_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-1 cds--md:col-span-2 cds--lg:col-span-4 cds--css-grid-column"
    >
      <div
        class="cds--dropdown__wrapper cds--list-box__wrapper"
      >
        <label
          class="cds--label cds--visually-hidden"
          for="downshift-_r_pt_-toggle-button"
          id="downshift-_r_pt_-label"
        >
          Route
        </label>
        <div
          class="cds--dropdown cds--dropdown--sm cds--autoalign cds--list-box cds--list-box--sm"
          id="route-entry-1"
        >
          <button
            aria-activedescendant=""
            aria-controls="downshift-_r_pt_-menu"
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-label="Route"
            class="cds--list-box__field"
            id="downshift-_r_pt_-toggle-button"
            role="combobox"
            tabindex="0"
            title="Route"
            type="button"
          >
            <span
              class="cds--list-box__label"
            >
              Route
            </span>
            <div
              class="cds--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height="16"
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <ul
            aria-labelledby="downshift-_r_pt_-label"
            class="cds--list-box__menu"
            id="downshift-_r_pt_-menu"
            role="listbox"
            style="position: fixed; left: 0px; top: 0px; visibility: visible; transform: translate(0px, 0px);"
          />
        </div>
      </div>
    </div>
    <div
      class="column cds--sm:col-span-2 cds--md:col-span-4 cds--lg:col-span-8 cds--css-grid-column"
    >
      <div
        class="cds--form-item"
      >
        <div
          class="cds--date-picker cds--date-picker--single"
        >
          <div
            class="cds--date-picker-container"
          >
            <label
              class="cds--label cds--visually-hidden"
              dir="auto"
              for="start-date-entry-1"
            >
              Start date
            </label>
            <div
              class="cds--date-picker-input__wrapper"
            >
              <span>
                <input
                  aria-label="Start Date"
                  class="cds--date-picker__input cds--date-picker__input--sm flatpickr-input"
                  id="start-date-entry-1"
                  pattern="\\d{1,2}\\/\\d{1,2}\\/\\d{4}"
                  placeholder="d/m/Y"
                  type="text"
                />
                <svg
                  aria-hidden="true"
                  class="cds--date-picker__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M26,4h-4V2h-2v2h-8V2h-2v2H6C4.9,4,4,4.9,4,6v20c0,1.1,0.9,2,2,2h20c1.1,0,2-0.9,2-2V6C28,4.9,27.1,4,26,4z M26,26H6V12h20 V26z M26,10H6V6h4v2h2V6h8v2h2V6h4V10z"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="footerRow cds--sm:col-span-4 cds--md:col-span-8 cds--lg:col-span-16 cds--css-grid-column"
    >
      <span>
        Total quantity
         : 
        0
         
      </span>
    </div>
  </div>
  <div
    class="cds--css-grid"
  >
    <div
      class="_textAreaWCloseContainer_1s7of_1 cds--sm:col-span-8 cds--md:col-span-8 cds--lg:col-span-16 cds--xlg:col-span-16 cds--css-grid-column"
    >
      <div
        class="cds--form-item"
      >
        <div
          class="cds--text-area__label-wrapper"
        >
          <label
            class="cds--label cds--visually-hidden"
            dir="auto"
            for="vaccination-note-entry-1"
          >
            Add Note
          </label>
          <div
            class="cds--label cds--text-area__label-counter"
            dir="auto"
          >
            21/1024
          </div>
        </div>
        <div
          class="cds--text-area__wrapper"
        >
          <textarea
            aria-invalid="false"
            aria-readonly="false"
            class="cds--text-area"
            data-testid="vaccination-note-entry-1"
            id="vaccination-note-entry-1"
            maxlength="1024"
            placeholder="Add notes for the vaccination"
            rows="4"
            style="width: 100%;"
            type="default"
          >
            Patient has allergies
          </textarea>
          <span
            aria-atomic="true"
            aria-live="assertive"
            class="cds--text-area__counter-alert"
            role="alert"
          />
        </div>
      </div>
      <div
        class="_closeButton_1s7of_29 cds--sm:col-span-1 cds--md:col-span-1 cds--lg:col-span-1 cds--xlg:col-span-1 cds--css-grid-column"
      >
        <span
          class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--top cds--tooltip cds--icon-tooltip"
        >
          <div
            class="cds--tooltip-trigger__wrapper"
          >
            <button
              aria-label="Close Selected Item"
              aria-labelledby="tooltip-_r_q1_"
              class="cds--btn cds--btn--lg cds--layout--size-lg cds--btn--primary cds--btn--icon-only"
              data-testid="vaccination-note-entry-1-close-button"
              id="vaccination-note-entry-1-close-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <span
            aria-hidden="true"
            class="cds--popover"
            id="tooltip-_r_q1_"
            role="tooltip"
          >
            <span
              class="cds--popover-content cds--tooltip-content"
            >
              Close
            </span>
            <span
              class="cds--popover-caret"
            />
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;
